feat : #13 - querydsl 의존성 추가 및 gitignore 설정

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ out/
 /src/main/java/com/example/servicehub/security/
 /src/main/resources/image/
 /src/test/resources/image/
+/src/main/generated/
