feat : #23 - 테스트 환경에서 yml파일 공개

--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,5 @@ out/
 /src/main/resources/image/
 /src/main/resources/static/
 /src/main/resources/*.yml
-
+/src/test/resources/image/
 /src/main/generated/
