feat : #27 - 실제 서비스 크롤링을 위한 jsoup 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+
+    implementation 'org.jsoup:jsoup:1.15.3'
+
     implementation "com.querydsl:querydsl-jpa"
     implementation "com.querydsl:querydsl-core"
     implementation "com.querydsl:querydsl-collections"
