feat : #50 - 사용자 프로필 저장 경로 gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ out/
 
 ### custom ###
 /src/main/resources/image/
+/src/main/resources/profile/
 /src/main/resources/static/
 /src/main/resources/*.yml
 /src/test/resources/image/
