feat : #66 - gitignore에 test resource 파일 추가

--- a/.gitignore
+++ b/.gitignore
@@ -43,4 +43,5 @@ out/
 /src/main/resources/static/
 /src/main/resources/*.yml
 /src/test/resources/image/
+/src/test/resources/profile/
 /src/main/generated/
