--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ dependencies {
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
     // java.lang.NoClassDefFoundError (javax.annotation.Entity) 대응 코드
 
+
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
