--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -36,8 +36,8 @@ jobs:
           PROD_SERVER_PORT: ${{secrets.PROD_SERVER_PORT}}
           DB_HOST: ${{secrets.DB_HOST}}
           DB_PORT: ${{secrets.DB_PORT}}
-          DB_NAME: ${{secrets.PROD_DB_NAME}}
-          DB_USER: ${{secrets.PROD_USER}}
+          DB_NAME: ${{secrets.DB_NAME}}
+          DB_USER: ${{secrets.DB_PASSWORD}}
           DB_PASSWORD: ${{secrets.PROD_PASSWORD}}
           HOME_DIR: ${{secrets.HOME_DIR}}
 
