--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -37,7 +37,7 @@ jobs:
           DB_HOST: ${{secrets.DB_HOST}}
           DB_PORT: ${{secrets.DB_PORT}}
           DB_NAME: ${{secrets.DB_NAME}}
-          DB_USER: ${{secrets.DB_PASSWORD}}
-          DB_PASSWORD: ${{secrets.PROD_PASSWORD}}
+          DB_USER: ${{secrets.DB_USER}}
+          DB_PASSWORD: ${{secrets.DB_PASSWORD}}
           HOME_DIR: ${{secrets.HOME_DIR}}
 
